--- a/template/colorui/components/cu-custom.wxml
+++ b/template/colorui/components/cu-custom.wxml
@@ -8,6 +8,10 @@
       <text class="cuIcon-back" bindtap="BackPage"></text>
       <text class="cuIcon-homefill" bindtap="toHome"></text>
     </view>
+      <view class="action border-custom"  wx:if="{{isLeftCustom}}" style="width:{{Custom.width}}px;height:{{Custom.height}}px;margin-left:calc(750rpx - {{Custom.right}}px)">
+      <text  bindtap="chinese">CN</text>
+      <text  bindtap="english">EN</text>
+    </view>
     <view class="content" style="top:{{StatusBar}}px">
       <slot name="content"></slot>
     </view>
