--- a/template/pages/home/home.wxml
+++ b/template/pages/home/home.wxml
@@ -1,6 +1,39 @@
 <scroll-view scroll-y class="scrollPage">
-<cu-custom bgColor="bg-gradual-blue">
+<cu-custom bgColor="bg-gradual-blue" isLeftCustom>
   <view slot="content">问卷调查</view>
 </cu-custom>
+<view class="cu-bar bg-white solid-bottom">
+  <view class='action'>
+    <text class='cuIcon-titles text-orange '></text> 问题1：您的性别是：
+  </view>
+  <view class="action">
+      <button class="cu-btn bg-green shadow" bindtap="showModal" data-target="menuModal">Language</button>
+    </view>
+</view>
+  <view class="cu-modal {{modalName=='menuModal'?'show':''}}" bindtap="hideModal">
+    <view class="cu-dialog" catchtap>
+      <scroll-view scroll-y style="height:100rpx">
+        <view class="cu-list menu text-left solid-top">
+          <view class="cu-item">
+            <view class="content">
+              <text class="text-grey">CN/EN</text>
+            </view>
+            <view class="action">
+              <switch bindchange="languageChange"></switch>
+            </view>
+          </view>
+        </view>
+      </scroll-view>
+    </view>
+  </view>
+ <view class="cu-list menu {{'card-menu margin-top'}}">
+    <view class="cu-item {{menuArrow?'arrow':''}}">
+      <view class="content">
+        <text class="cuIcon-circlefill text-grey"></text>
+        <text class="text-grey">男</text>
+      </view>
+    </view>
+  </view>
+
 <view class="cu-tabbar-height"></view>
 </scroll-view>
