问题列表完成

--- a/template/colorui/main.wxss
+++ b/template/colorui/main.wxss
@@ -1375,7 +1375,6 @@ button.icon.lg {
 .cu-list.menu>.cu-item.arrow {
 	padding-right: 90rpx
 }
-
 .cu-list.menu>.cu-item.arrow:before {
 	position: absolute;
 	top: 0;
@@ -1392,7 +1391,25 @@ button.icon.lg {
 	font-family: "cuIcon";
 	line-height: 30rpx
 }
-
+.cu-list.menu>.cu-item.check {
+	padding-right: 90rpx
+}
+.cu-list.menu>.cu-item.check:before {
+	position: absolute;
+	top: 0;
+	right: 30rpx;
+	bottom: 0;
+	display: block;
+	margin: auto;
+	width: 30rpx;
+	height: 30rpx;
+	color: var(--green);
+	content: "\e645";
+	text-align: center;
+	font-size: 34rpx;
+	font-family: "cuIcon";
+	line-height: 30rpx
+}
 .cu-list.menu>.cu-item button.content {
 	padding: 0;
 	background-color: transparent;
