--- a/template/pages/home/home.wxml
+++ b/template/pages/home/home.wxml
@@ -27,13 +27,38 @@
     </view>
   </view>
  <view class="cu-list menu {{'card-menu margin-top'}}">
-    <view class="cu-item {{menuArrow?'arrow':''}}">
-      <view class="content">
+ <view wx:for="{{checkBox}}" wx:key="{{value}}" class="cu-item {{item.checked?'check':''}}">
+      <view class="content" bindtap="ChooseCheckbox" data-target="{{item}}">
         <text class="cuIcon-circlefill text-grey"></text>
-        <text class="text-grey">男</text>
+        <text class="text-grey">{{item.detail}}</text>
       </view>
     </view>
   </view>
-
+  <view class="cu-bar bg-white margin-top">
+  <view class='action'>
+    <text class='cuIcon-titles text-orange '></text> 问题2：您最喜欢的科目是什么：
+  </view>
+</view>
+ <view class="cu-list menu {{'card-menu margin-top'}}">
+ <view wx:for="{{checkBox1}}" wx:key="{{value}}" class="cu-item {{item.checked?'check':''}}">
+      <view class="content" bindtap="ChooseCheckbox" data-target="{{item}}">
+        <text class="cuIcon-circlefill text-grey"></text>
+        <text class="text-grey">{{item.detail}}</text>
+      </view>
+    </view>
+  </view>
+  <view class="cu-bar bg-white margin-top">
+  <view class='action'>
+    <text class='cuIcon-titles text-orange '></text> 问题3：测试的第三个问题：
+  </view>
+</view>
+ <view class="cu-list menu {{'card-menu margin-top'}}">
+ <view wx:for="{{checkBox1}}" wx:key="{{value}}" class="cu-item {{item.checked?'check':''}}">
+      <view class="content" bindtap="ChooseCheckbox" data-target="{{item}}">
+        <text class="cuIcon-circlefill text-grey"></text>
+        <text class="text-grey">{{item.detail}}</text>
+      </view>
+    </view>
+  </view>
 <view class="cu-tabbar-height"></view>
 </scroll-view>
