--- a/template/pages/result/result.wxml
+++ b/template/pages/result/result.wxml
@@ -1,2 +1,80 @@
-<!--pages/result/result.wxml-->
-<text>pages/result/result.wxml</text>
+<scroll-view scroll-y class="scrollPage">
+<image src='/images/banner.png' mode='widthFix' class='png' style='width:100%;height:486rpx'></image>
+ <view class="padding flex text-center text-grey bg-white shadow-warp">
+    <view class="flex flex-sub flex-direction solid-right">
+      <view class="text-xxl text-orange">{{totalPersons}}</view>
+      <view class="margin-top-sm">
+        <text class="cuIcon-friendfamous"></text>参加人数</view>
+    </view>
+    <view class="flex flex-sub flex-direction solid-right">
+      <view class="text-xxl text-blue">{{respondents}}</view>
+      <view class="margin-top-sm">
+        <text class="cuIcon-appreciatefill"></text>答题人数</view>
+    </view>
+    <view class="flex flex-sub flex-direction">
+      <view class="text-xxl text-green">{{averageDuration+'h'}}</view>
+      <view class="margin-top-sm">
+        <text class="cuIcon-countdownfill"></text>平均时长</view>
+    </view>
+  </view> 
+<view class="cu-bar bg-white solid-bottom margin-top-xs">
+  <view class="action">
+    <text class="cuIcon-title text-blue"></text>问题1：您的性别是：
+  </view>
+</view>
+<view class="padding bg-white">
+  <view class="cu-progress round margin-top">
+    <view class="bg-red" style="width:{{loading?'31.8%':''}};">男41.8%</view>
+  </view>
+  <view class="cu-progress round margin-top">
+    <view class="bg-red" style="width:{{loading?'61.8%':''}};">女68.2%</view>
+  </view>
+</view>
+<view class="cu-bar bg-white solid-bottom margin-top-xs">
+  <view class="action">
+    <text class="cuIcon-title text-blue"></text>问题2：您最喜欢的科目是什么：
+  </view>
+</view>
+<view class="padding bg-white">
+  <view class="cu-progress round margin-top">
+    <view class="bg-red" style="width:{{loading?'41.8%':''}};">体育41.8%</view>
+  </view>
+  <view class="cu-progress round margin-top">
+    <view class="bg-red" style="width:{{loading?'18.2%':''}};">地理18.2%</view>
+  </view>
+   <view class="cu-progress round margin-top">
+    <view class="bg-red" style="width:{{loading?'16.2%':''}};">化学16.2%</view>
+  </view>
+   <view class="cu-progress round margin-top">
+    <view class="bg-red" style="width:{{loading?'10.2%':''}};">生物10.2%</view>
+  </view>
+   <view class="cu-progress round margin-top">
+    <view class="bg-red" style="width:{{loading?'13.6%':''}};">语文13.6%</view>
+  </view>
+</view>
+<view class="cu-bar bg-white solid-bottom margin-top-xs">
+  <view class="action">
+    <text class="cuIcon-title text-blue"></text>问题3：测试的第三个问题：
+  </view>
+</view>
+<view class="padding bg-white">
+  <view class="cu-progress round margin-top">
+    <view class="bg-red" style="width:{{loading?'41.8%':''}};">体育41.8%</view>
+  </view>
+  <view class="cu-progress round margin-top">
+    <view class="bg-red" style="width:{{loading?'18.2%':''}};">地理18.2%</view>
+  </view>
+   <view class="cu-progress round margin-top">
+    <view class="bg-red" style="width:{{loading?'16.2%':''}};">化学16.2%</view>
+  </view>
+   <view class="cu-progress round margin-top">
+    <view class="bg-red" style="width:{{loading?'10.2%':''}};">生物10.2%</view>
+  </view>
+   <view class="cu-progress round margin-top">
+    <view class="bg-red" style="width:{{loading?'13.6%':''}};">语文13.6%</view>
+  </view>
+</view>
+
+
+<view class="cu-tabbar-height"></view>
+</scroll-view>
