首页标签栏

--- a/template/pages/index/index.wxml
+++ b/template/pages/index/index.wxml
@@ -1,34 +1,23 @@
-<basics wx:if="{{PageCur=='basics'}}"></basics>
-<component wx:if="{{PageCur=='component'}}"></component>
-<plugin wx:if="{{PageCur=='plugin'}}"></plugin>
-<about wx:if="{{PageCur=='about'}}"></about>
+<main wx:if="{{PageCur=='main'}}"></main>
+<others wx:if="{{PageCur=='others'}}"></others>
+<personal wx:if="{{PageCur=='personal'}}"></personal>
 <view class="cu-bar tabbar bg-white shadow foot">
-  <view class="action" bindtap="NavChange" data-cur="basics">
+  <view class="action" bindtap="NavChange" data-cur="main">
     <view class='cuIcon-cu-image'>
-      <image src="/images/tabbar/basics{{PageCur=='basics'?'_cur':''}}.png"></image>
+     <text class="cuIcon-deliver lg {{PageCur=='main'?'text-green':'text-gray'}}"></text>
     </view>
-    <view class="{{PageCur=='basics'?'text-green':'text-gray'}}">元素</view>
+    <view class="{{PageCur=='main'?'text-green':'text-gray'}}">首页</view>
   </view>
-  <view class="action" bindtap="NavChange" data-cur="component">
+  <view class="action" bindtap="NavChange" data-cur="others">
     <view class='cuIcon-cu-image'>
-      <image src="/images/tabbar/component{{PageCur=='component'?'_cur':''}}.png"></image>
+        <text class="cuIcon-explore lg {{PageCur=='others'?'text-green':'text-gray'}}"></text>
     </view>
-    <view class="{{PageCur=='component'?'text-green':'text-gray'}}">组件</view>
+    <view class="{{PageCur=='others'?'text-green':'text-gray'}}">发现</view>
   </view>
-  <view class="action" bindtap="NavChange" data-cur="plugin">
+  <view class="action" bindtap="NavChange" data-cur="personal">
     <view class='cuIcon-cu-image'>
-      <image src="/images/tabbar/plugin{{PageCur=='plugin'?'_cur':''}}.png"></image>
+      <text class="cuIcon-my lg {{PageCur=='personal'?'text-green':'text-gray'}}"></text>
     </view>
-    <view class="{{PageCur=='plugin'?'text-green':'text-gray'}}">扩展</view>
-  </view>
-  <view class="action" bindtap="NavChange" data-cur="about">
-    <view class='cuIcon-cu-image'>
-      <image src="/images/tabbar/about{{PageCur=='about'?'_cur':''}}.png"></image>
-    </view>
-    <view class="{{PageCur=='about'?'text-green':'text-gray'}}">关于</view>
+    <view class="{{PageCur=='personal'?'text-green':'text-gray'}}">我的</view>
   </view>
 </view>
-<!-- 
-  "main": "/pages/Main/home_main",
-    "others": "/pages/Others/others",
-    "personal": "/pages/Personal/personal", -->
