--- a/template/miniprogram/colorui/main.wxss
+++ b/template/miniprogram/colorui/main.wxss
@@ -696,26 +696,10 @@ radio.white[checked] .wx-radio-input {
 	transform: translate(0rpx, 0rpx);
 	margin-right: initial;
 }
-
-.cu-btn.ny {
-	position: relative;
-	border: 0rpx;
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
-	box-sizing: border-box;
-	padding: 0 30rpx;
-	font-size: 28rpx;
-  width: 200rpx;
-	height: 50rpx;
-	line-height: 1;
-	text-align: center;
-	text-decoration: none;
-	overflow: visible;
-	margin-left: initial;
-	transform: translate(0rpx, 0rpx);
-	margin-right: initial;
+.cur-button.ny{
+  	font-size: 28rpx;
 }
+
 .cu-btn::after {
 	display: none;
 }
