--- a/template/miniprogram/pages/home/index_home.wxml
+++ b/template/miniprogram/pages/home/index_home.wxml
@@ -1,18 +1,61 @@
-<map id="myMap" 
-longitude="116.23128" 
-latitude="40.22077"
-scale="14"  
-show-location 
-style="width: 100%; height: 100vh;">
-<!-- <cover-view class='btn' bindtap='codeg'>
-  <cover-image src='../img/扫码.png' class='code'></cover-image>
-    <cover-view class='text'>立即购买</cover-view>
-  </cover-view>
-  <cover-view class='ten' bindtap='gps'>
-  <cover-image src='../img/定位.png' class='ten_l'></cover-image> -->
-  <view class="flex  margin-tb-xl padding-bottom-xs justify-start ">
-   <view class="cu-avatar round lg margin-left" wx:for="{{4}}" wx:key style="background-image:url(https://ossweb-img.qq.com/images/lol/web201310/skin/big1000{{index+1}}.jpg);">
-    <view class="cu-tag badge {{index%2==0?'cuIcon-female bg-pink':'cuIcon-male bg-blue'}}"></view>
-  </view> </view>
-</map>
-
+<scroll-view scroll-y class="scrollPage">
+  <view class="UCenter-bg">
+    <image src="/images/logo.png" class="png" mode="widthFix"></image>
+    <view class="text-xl">智能互联
+      <text class="text-df">v1.0</text>
+    </view>
+    <view class="margin-top-sm">
+      <text>By:车联网科</text>
+    </view>
+    <image src="/images/wave.gif" mode="scaleToFill" class="gif-wave"></image>
+  </view>
+  <view class="padding flex text-center text-grey bg-white shadow-warp">
+<scroll-view scroll-x class="bg-white nav" scroll-with-animation scroll-left="{{scrollLeft}}">
+  <view class="cu-item {{index==TabCur?'text-green cur':''}}" wx:for="{{10}}" wx:key bindtap="tabSelect" data-id="{{index}}">
+    Tab{{index}}
+  </view>
+</scroll-view>
+  </view>
+   <view class="cu-bar bg-white solid-bottom margin-top">
+    <view class="action">
+      <text class="cuIcon-title text-orange"></text> 宫格列表
+    </view>
+    <view class="action">
+      <button class="cur-button.ny bg-green" size="mini" bindtap="showModal" data-target="gridModal">设置</button>
+    </view>
+  </view>
+  <view class="cu-modal {{modalName=='gridModal'?'show':''}}" bindtap="hideModal">
+    <view class="cu-dialog" catchtap>
+      <radio-group class="block" bindchange="gridchange">
+        <view class="cu-list menu text-left">
+          <view class="cu-item" wx:for="{{3}}" wx:key>
+            <label class="flex justify-between align-center flex-sub">
+              <view class="flex-sub">{{index +3}} 列</view>
+              <radio class="round" value="{{index +3}}" checked="{{gridCol==index+3}}"></radio>
+            </label>
+          </view>
+        </view>
+      </radio-group>
+      <view class="cu-list menu text-left solid-top">
+        <view class="cu-item">
+          <view class="content">
+            <text class="text-grey">边框</text>
+          </view>
+          <view class="action">
+            <switch bindchange="gridswitch"></switch>
+          </view>
+        </view>
+      </view>
+    </view>
+  </view>
+  <view class="cu-list grid col-{{gridCol}} {{gridBorder?'':'no-border'}}">
+    <view class="cu-item" wx:for="{{iconList}}" wx:key wx:if="{{index<gridCol*2}}">
+      <view class="cuIcon-{{item.icon}} text-{{item.color}}">
+        <view class="cu-tag badge" wx:if="{{item.badge!=0}}">
+          <block wx:if="{{item.badge!=1}}">{{item.badge>99?"99+":item.badge}}</block>
+        </view>
+      </view>
+      <text>{{item.name}}</text>
+    </view>
+  </view>
+</scroll-view>
