--- a/template/miniprogram/pages/question/index/index_question.wxml
+++ b/template/miniprogram/pages/question/index/index_question.wxml
@@ -10,6 +10,6 @@
   </view>
   <text class="cuIcon-title text-white margin-top:20rpx">{{userInfo.nickName}}</text>
   <view class="padding flex flex-direction">
-<button class="cu-btn bg-red margin-tb-sm lg" bindtap="bindViewTap">点击进入答题</button>
+<button class="cu-btn bg-red margin-tb-sm lg" bindtap="bindViewTap">{{btnText}}</button>
   </view>
 </view>
