--- a/template/miniprogram/pages/home/index_home.wxml
+++ b/template/miniprogram/pages/home/index_home.wxml
@@ -4,9 +4,6 @@
     <view class="text-xl">智能互联
       <text class="text-df">v1.0</text>
     </view>
-    <view class="margin-top-sm">
-      <text>By:车联网科</text>
-    </view>
     <image src="/images/wave.gif" mode="scaleToFill" class="gif-wave"></image>
   </view>
   <view class="padding flex text-center text-grey bg-white shadow-warp">
@@ -58,4 +55,78 @@
       <text>{{item.name}}</text>
     </view>
   </view>
+
+  <view class="cu-bar bg-white solid-bottom margin-top">
+  <view class="action">
+    <text class="cuIcon-title text-blue"></text>资讯类
+  </view>
+</view>
+<view class="cu-card dynamic {{isCard?'no-card':''}}">
+  <view class="cu-item shadow">
+    <view class="cu-list menu-avatar">
+      <view class="cu-item">
+        <view class="cu-avatar round lg" style="background-image:url(https://ossweb-img.qq.com/images/lol/web201310/skin/big10006.jpg);"></view>
+        <view class="content flex-sub">
+          <view>凯尔</view>
+          <view class="text-gray text-sm flex justify-between">
+            2019年12月3日
+          </view>
+        </view>
+      </view>
+    </view>
+    <view class="text-content">
+      北汽集团党委副书记、总经理，福田汽车集团董事长张夕勇一行到福田戴姆勒调研指导并现场慰问！
+    </view>
+    <view class="grid flex-sub padding-lr {{isCard?'col-3 grid-square':'col-1'}}">
+      <view class="bg-img {{isCard?'':'only-img'}}" style="background-image:url(https://tse4-mm.cn.bing.net/th/id/OIP.6mA5ZoGprFhBv4OwXgDecQHaE8?w=282&h=188&c=7&o=5&pid=1.7);" wx:for="{{isCard?9:1}}" wx:key="{{index}}">
+      </view>
+    </view>
+    <view class="text-gray text-sm text-right padding">
+      <text class="cuIcon-attentionfill margin-lr-xs"></text> 10
+      <text class="cuIcon-appreciatefill margin-lr-xs"></text> 20
+      <text class="cuIcon-messagefill margin-lr-xs"></text> 30
+    </view> 
+  </view>
+</view>
+
+<view class="cu-card case {{isCard?'no-card':''}}">
+  <view class="cu-item shadow">
+    <view class="image">
+      <image src="https://tse2-mm.cn.bing.net/th/id/OIP.dGGfVgusW-y1urFsH5tLCAHaE7?w=282&h=187&c=7&o=5&pid=1.7" mode="widthFix"></image>
+      <view class="cu-tag bg-blue">最新</view>
+      <view class="cu-bar bg-shadeBottom">
+        <text class="text-cut">1月7日下午，以“共建 共享 共赢——致力于专业的项目管理”为主题的蓝天保卫战项目经验总结会在新办公楼B313会议室举行。产品规划、产品工程、采购、</text>
+      </view>
+    </view>
+  </view>
+
+ <view class="cu-bar bg-white solid-bottom margin-top">
+    <view class="action">
+      <text class="cuIcon-title text-yellow"></text> 调研类
+    </view>
+  </view>
+<view class="cu-list grid col-{{questionCol}} {{gridBorder?'':'no-border'}}">
+    <view class="cu-item" wx:for="{{questList}}" wx:key wx:if="{{index<questionCol*2}}">
+      <view class="cuIcon-{{item.icon}} text-{{item.color}}">
+        <view class="cu-tag badge" wx:if="{{item.badge!=0}}">
+          <block wx:if="{{item.badge!=1}}">{{item.badge>99?"99+":item.badge}}</block>
+        </view>
+      </view>
+      <text>{{item.name}}</text>
+    </view>
+  </view>
+ <view class="cu-bar bg-white solid-bottom margin-top">
+    <view class="action">
+    <text class="cuIcon-appreciatefill text-red"></text>
+    <text class="text-grey">赞赏支持</text>
+     <view class="action padding-xl">  
+     <text class="text-green"> by:车联网科</text>
+    </view>
+    </view>
+  </view>
+
+
+  <view class="cu-bar bg-white solid-bottom margin-top">
+  </view>
+</view>
 </scroll-view>
