--- a/template/miniprogram/pages/home/index_home.wxss
+++ b/template/miniprogram/pages/home/index_home.wxss
@@ -1,6 +1,7 @@
 .UCenter-bg {
-  background-image: url(https://image.weilanwl.com/color2.0/index.jpg);
+  background-image: url(https://tse3-mm.cn.bing.net/th/id/OIP.TguBKSUQYN_-T0qj-Gw8PwHaE8?w=300&h=200&c=7&o=5&pid=1.7);
   background-size: cover;
+  width: 100%;
   height: 420rpx;
   display: flex;
   justify-content: center;
@@ -9,7 +10,7 @@
   position: relative;
   flex-direction: column;
   align-items: center;
-  color: #fff;
+  color:black;
   font-weight: 300;
   text-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
 }
