--- a/template/miniprogram/pages/index/index.wxml
+++ b/template/miniprogram/pages/index/index.wxml
@@ -4,15 +4,15 @@
 <view class="cu-bar tabbar bg-white shadow foot">
   <view class="action" bindtap="NavChange" data-cur="home">
     <view class='cuIcon-cu-image'>
-     <text class="cuIcon-deliver lg {{PageCur=='home'?'text-green':'text-gray'}}"></text>
+     <text class="cuIcon-home lg {{PageCur=='home'?'text-green':'text-gray'}}"></text>
     </view>
-    <view class="{{PageCur=='home'?'text-green':'text-gray'}}">组队</view>
+    <view class="{{PageCur=='home'?'text-green':'text-gray'}}">主页</view>
   </view>
   <view class="action" bindtap="NavChange" data-cur="question">
     <view class='cuIcon-cu-image'>
         <text class="cuIcon-explore lg {{PageCur=='question'?'text-green':'text-gray'}}"></text>
     </view>
-    <view class="{{PageCur=='question'?'text-green':'text-gray'}}">问卷</view>
+    <view class="{{PageCur=='question'?'text-green':'text-gray'}}">发现</view>
   </view>
   <view class="action" bindtap="NavChange" data-cur="other">
     <view class='cuIcon-cu-image'>
