--- a/template/miniprogram/pages/question/home_question/home.wxml
+++ b/template/miniprogram/pages/question/home_question/home.wxml
@@ -4,28 +4,9 @@
 </cu-custom>
 <view class="cu-bar bg-white solid-bottom">
   <view class='action'>
-    <text class='cuIcon-titles text-orange '></text> 问题1：您的性别是：
+    <text class='cuIcon-titles text-orange '></text>{{questionResult}}
   </view>
-  <view class="action">
-      <button class="cur-button.ny bg-green" size="mini" bindtap="showModal" data-target="menuModal">Language</button>
-    </view>
 </view>
-  <view class="cu-modal {{modalName=='menuModal'?'show':''}}" bindtap="hideModal">
-    <view class="cu-dialog" catchtap>
-      <scroll-view scroll-y style="height:100rpx">
-        <view class="cu-list menu text-left solid-top">
-          <view class="cu-item">
-            <view class="content">
-              <text class="text-grey">CN/EN</text>
-            </view>
-            <view class="action">
-              <switch bindchange="languageChange"></switch>
-            </view>
-          </view>
-        </view>
-      </scroll-view>
-    </view>
-  </view>
  <view class="cu-list menu {{'card-menu margin-top'}}">
  <view wx:for="{{checkBox}}" wx:key="{{value}}" class="cu-item {{item.checked?'check':''}}">
       <view class="content" bindtap="ChooseCheckbox" data-target="{{item}}">
@@ -34,31 +15,8 @@
       </view>
     </view>
   </view>
-  <view class="cu-bar bg-white margin-top">
-  <view class='action'>
-    <text class='cuIcon-titles text-orange '></text> 问题2：您最喜欢的科目是什么：
-  </view>
-</view>
- <view class="cu-list menu {{'card-menu margin-top'}}">
- <view wx:for="{{checkBox1}}" wx:key="{{value}}" class="cu-item {{item.checked?'check':''}}">
-      <view class="content" bindtap="ChooseCheckbox1" data-target="{{item}}">
-        <text class="cuIcon-circlefill text-grey"></text>
-        <text class="text-grey">{{item.detail}}</text>
-      </view>
-    </view>
-  </view>
-  <view class="cu-bar bg-white margin-top">
-  <view class='action'>
-    <text class='cuIcon-titles text-orange '></text> 问题3：测试的第三个问题：
-  </view>
-</view>
- <view class="cu-list menu {{'card-menu margin-top'}}">
- <view wx:for="{{checkBox1}}" wx:key="{{value}}" class="cu-item {{item.checked?'check':''}}">
-      <view class="content" bindtap="ChooseCheckbox1" data-target="{{item}}">
-        <text class="cuIcon-circlefill text-grey"></text>
-        <text class="text-grey">{{item.detail}}</text>
-      </view>
-    </view>
-  </view>
+
+ 
+
 <view class="cu-tabbar-height"></view>
 </scroll-view>
